Fixing dark mode view for the settings page

--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -37,7 +37,7 @@ ul {
 
 
 @media (prefers-color-scheme: dark) {
-    .instructions {
+    .dialogWindow {
         background-color: black;
     }
 }
